# flic-rust-client

./: Cargo.toml
src/: client.rs
