[package]
name = "flic-rust-client"
description = "Flic 2 Button Client Library written in Rust"
license = "MIT"
license-file = "LICENSE.md"
readme = "README.md"
repository = "https://github.com/bloznelis/flic-rust-client"
version = "0.2.0"
authors = ["Lukas Bloznelis <lukas.bloznelis@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
num_enum = "0.7.1"
regex = "1"
tokio = { version = "1", features = ["full"] }
